--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
     <title>Idle Gainz</title>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WM3ZKTQ6C0"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-WM3ZKTQ6C0"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
         gtag('config', 'G-WM3ZKTQ6C0');
-    </script>
+    </script> -->
 </head>
 
 <body>
+    <script src="chs.js"></script>
+    <script src="core.js"></script>
     <div class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
             <a href="#" class="navbar-brand">Idle Gainz</a>
@@ -1152,6 +1154,21 @@
     <script src="js/math.min.js"></script>
     <script src="js/stats.js"></script>
     <script src="js/app.js"></script>
+<!--客服 开始-->
+<link rel="stylesheet" href="//g8hh.github.io/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
+<script src="//g8hh.github.io/static/js/kf.js"></script>
+<!-- 客服 结束 -->
+<!--站长统计-->
+    <div style="display: none">
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?828597e93cee632465679b7ef35edfd5";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>    </div>
 </body>
 
 </html>
